--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,6 @@
 #   Configuration variables | http://shopify.github.io/themekit/configuration/
 #   Ignore patterns | http://shopify.github.io/themekit/ignores/
 
----
 
 development:
  password: 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
@@ -20,9 +19,9 @@ development:
  ignore_files:
     - settings_data.json # Uncomment this line to avoid resetting theme settings
 
-# production:
-#   password:
-#   theme_id: "live"
-#   store: your-shop.myshopify.com
-#   ignore_files:
-    #- settings_data.json # Uncomment this line to avoid resetting theme settings
+production:
+  password: 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
+  theme_id: "113471979672"
+  store: https://ppebuddytest.myshopify.com
+  ignore_files:
+    - settings_data.json # Uncomment this line to avoid resetting theme settings
